2-Orchestration/clusters/home-automation/home-assistant/configs/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    istio-injection: enabled
    app.kubernetes.io/name: home-assistant
