2-Orchestration/clusters/home-automation/home-assistant/configs/home-assistant/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
spec:
  exportTo:
  - istio-system
  gateways:
  - istio-system/home
  hosts:
  - assistant.home.kellerhome.us
  http:
  - route:
    - destination:
        host: home-assistant-home-assistant
        port:
          number: 8123
