2-Orchestration/clusters/home-automation/home-assistant/configs/home-assistant/zwave-home-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zwave-home
spec:
  exportTo:
  - istio-system
  gateways:
  - istio-system/home
  hosts:
  - zwave-home.home.kellerhome.us
  http:
  - route:
    - destination:
        host: zwave-js-ui
        port:
          number: 80
