2-Orchestration/clusters/home-automation/home-assistant/configs/home-assistant/zwave-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zwave
spec:
  exportTo:
  - istio-system
  gateways:
  - istio-system/home
  hosts:
  - zwave.home.kellerhome.us
  http:
  - route:
    - destination:
        host: home-assistant-home-assistant-zwave
        port:
          number: 80
